feat: simple landing page change

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <img src="full_logo_top_white600.png" />
         <div class="logo-container text-container position-absolute">
             <div class="line mt-2 mb-3"></div>
-            <div class="logo-text">Ihr Partner für Technologie & Lösungen</div>
+            <div class="logo-text">Ihr Partner für Informationstechnologie</div>
             <div class="logo-text"><a href="mailto:info@ateso.ch">Kontakt</a></div>
         </div>
     </div>
