--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="favicon.png" />
 
+    <!-- OG metadata -->
+    <meta property="og:title" content="ATESO GmbH" />
+    <meta property="og:description" content="Ihr Partner für Informationstechnologie. Kontaktieren Sie uns." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ateso.ch/" />
+    <meta property="og:image" content="https://ateso.ch/ateso_top_whitexxhdpi.png" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -70,7 +77,7 @@
 <body>
 <div class="fwh-container d-flex justify-content-center align-items-center">
     <div class="logo-container position-relative">
-        <img src="full_logo_top_white600.png" />
+        <img src="ateso_top_whitexxhdpi.png" />
         <div class="logo-container text-container position-absolute">
             <div class="line mt-2 mb-3"></div>
             <div class="logo-text">Ihr Partner für Informationstechnologie</div>
