--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Ihr Partner für Informationstechnologie. Kontaktieren Sie uns." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ateso.ch/" />
-    <meta property="og:image" content="https://ateso.ch/ateso_top_whitexxhdpi.png" />
+    <meta property="og:image" content="https://ateso.ch/og_logo_600.png" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -38,7 +38,7 @@
     }
 
     a{
-        color: #3cd3ad;
+        color: #00A799;
         transition-duration: 1s;
     }
 
