--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <meta name="description" content="ATESO, ihr Partner für Software-Entwicklung. Wir beschleunigung ihr Unternehmen durch IT.">
+    <meta name="keywords" content="ATESO, it, informatik, software, beratung, consulting, app, development">
 
     <!-- OG metadata -->
     <meta property="og:title" content="ATESO GmbH" />
@@ -12,10 +13,14 @@
     <meta property="og:url" content="https://ateso.ch/" />
     <meta property="og:image" content="https://ateso.ch/og_logo_600.png" />
 
+    <!-- Link elemets -->
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="canonical" href="https://ateso.ch/"/>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Ateso</title>
+    <title>ATESO | Beschleunigung durch IT</title>
 </head>
 <style>
     html, body {
@@ -77,10 +82,10 @@
 <body>
 <div class="fwh-container d-flex justify-content-center align-items-center">
     <div class="logo-container position-relative">
-        <img src="ateso_top_whitexxhdpi.png" />
+        <img src="ateso_top_whitexxhdpi.png" alt="ATESO corporate logo" title="ATESO corporate logo" />
         <div class="logo-container text-container position-absolute">
             <div class="line mt-2 mb-3"></div>
-            <div class="logo-text">Ihr Partner für Informationstechnologie</div>
+            <h1 class="logo-text">Ihr Partner für Informationstechnologie</h1>
             <div class="logo-text"><a href="mailto:info@ateso.ch">Kontakt</a></div>
         </div>
     </div>
