feat: seo optimization

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="ATESO, ihr Partner für Software-Entwicklung. Wir beschleunigung ihr Unternehmen durch IT.">
-    <meta name="keywords" content="ATESO, it, informatik, software, beratung, consulting, app, development">
+    <meta name="description" content="Ihr Partner für Software-Entwicklung und Technologie-Beratung. Wir beschleunigung ihr Unternehmen durch IT. Innovativ, pragmatisch und zielgerichtet.">
+    <meta name="keywords" content="ATESO, it, informatik, software, beratung, consulting, app, development, software">
 
     <!-- OG metadata -->
-    <meta property="og:title" content="ATESO GmbH" />
-    <meta property="og:description" content="Ihr Partner für Informationstechnologie. Kontaktieren Sie uns." />
+    <meta property="og:title" content="ATESO GmbH - Innovativ, pragmatisch und zielgerichtet" />
+    <meta property="og:description" content="Ihr Partner für Software-Entwicklung und Technologie-Beratung. Kontaktieren Sie uns." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ateso.ch/" />
     <meta property="og:image" content="https://ateso.ch/og_logo_600.png" />
