--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Ihr Partner für Software-Entwicklung und Technologie-Beratung. Wir beschleunigung ihr Unternehmen durch IT. Innovativ, pragmatisch und zielgerichtet.">
+    <title>ATESO | Beschleunigung durch IT. Innovativ, pragmatisch und zielgerichtet.</title>
+    <meta name="description" content="Ihr Partner für Software-Entwicklung und Technologie-Beratung. Wir beschleunigen ihr Unternehmen durch IT. Innovativ, pragmatisch und zielgerichtet.">
     <meta name="keywords" content="ATESO, it, informatik, software, beratung, consulting, app, development, software">
 
     <!-- OG metadata -->
-    <meta property="og:title" content="ATESO GmbH - Innovativ, pragmatisch und zielgerichtet" />
+    <meta property="og:title" content="ATESO | Innovativ, pragmatisch und zielgerichtet" />
     <meta property="og:description" content="Ihr Partner für Software-Entwicklung und Technologie-Beratung. Kontaktieren Sie uns." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ateso.ch/" />
@@ -20,7 +21,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>ATESO | Beschleunigung durch IT</title>
+
 </head>
 <style>
     html, body {
